# PortalEd

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
portaled/: error_handlers.py  main.py
portaled/apis/: __init__.py  announcement.py  assignment.py  category.py  comment.py  document.py  event.py  grade.py  institution.py  post.py  profile.py  user.py
portaled/auth/: api.py  dependencies.py  responses.py  schemas.py  utils.py
portaled/database/: db.py
portaled/envs/: dev.env
portaled/models/: __init__.py  announcement.py  assignment.py  assignment_resolution.py  category.py  comment.py  document.py  event.py  grade.py  institution.py  post.py  profile.py  profile_grade.py  user.py  user_institution.py
portaled/queries/: announcement.py  assignment.py  category.py  comment.py  document.py  event.py  grade.py  institution.py  post.py  profile.py  user.py
portaled/schemas/: __init__.py  announcement.py  assignment.py  category.py  comment.py  document.py  event.py  grade.py  institution.py  post.py  profile.py  user.py
portaled/tests/: conftest.py  utils.py
portaled/tests/api/: __init__.py  test_posts_api.py  test_profiles_api.py  test_users_api.py
portaled/utils/: code_generator.py  enums.py  errors.py  get_env.py  secret_field.py
